tests/NormalTests/paczka1/small_fuzzy/97295056.err
Error in line 8: jclT A542 4,5
Error in line 2: WM9ICmXgdmP A866 57,8
Error in line 11: JJR A542 36,9
